[package]
name = "egui_from_hex"
authors = ["Perzium"]
description = "Fastest EGUI `from_hex()` function for Color32, available in ANY version of EGUI."
version = "0.2.0"

edition = "2024"
license = "MIT"

repository = "https://github.com/Perzium/egui_from_hex"
readme = "README.md"

keywords = ["egui", "color", "hex", "performance", "zero-allocation"]
categories = ["gui", "visualization"]

[package.metadata]
shame_level = "Extremely high, like, through the roof"
reason = "I forgot x was a letter"

[dependencies]
egui = ">=0.1.0"